objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Does_the_contract_include_ODP_Subsidiari__c</fullName>
        <label>Does the contract include ODP Subsidiari</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_written_agreement_allow_for_price__c</fullName>
        <label>Price chg if core exceeds a % annl volme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_Of_Each_Extension__c</fullName>
        <label>Duration Of Each Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDI_fee_language__c</fullName>
        <label>EDI fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Of_Current_Amendment__c</fullName>
        <label>Effective Date Of Current Amendment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract_2__c</fullName>
        <label>Effective Date of Original Contract 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract_3__c</fullName>
        <label>Effective Date of Original Contract 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract_4__c</fullName>
        <label>Effective Date of Original Contract 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract__c</fullName>
        <label>Effective Date of Original Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_Pricing_tied_to_Cust_Pricing__c</fullName>
        <label>Emp Pricing tied to Cust Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_date_of_Point_of_Sale_Discount__c</fullName>
        <label>End date of Point of Sale Discount?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excess_Dimension_Fees_Language__c</fullName>
        <label>Excess Dimension Fees Language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executed_Amendments__c</fullName>
        <label>Executed Amendments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Term Extension</fullName>
                </value>
                <value>
                    <fullName>Adjacencies</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_Upload_Email_Date__c</fullName>
        <label>Executed Upload Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executed Uploader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Upload_Email_Date__c</fullName>
        <label>Execution Upload Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Uploader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Terms__c</fullName>
        <label>Extension Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_1__c</fullName>
        <label>Fee Language Other 1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_2__c</fullName>
        <label>Fee Language Other 2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_3__c</fullName>
        <label>Fee Language Other 3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flex_program_language__c</fullName>
        <label>Flex program language</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Floor_for_OffContract_Structure__c</fullName>
        <label>Floor for OffContract Structure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Child_Cust_Core__c</fullName>
        <label>Floors permitted in Child Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_GP_Cust_Core__c</fullName>
        <label>Floors permitted in GP Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_OffContr_Whlsler_str__c</fullName>
        <label>Floors permitted in OffContr/Whlsler str</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Par_Cust_Core_List__c</fullName>
        <label>Floors permitted in Par Cust Core List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Standalone_Cust_Core__c</fullName>
        <label>Floors permitted in Standalone Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flrs_permitted_in_Cust_NonCore_Cat_struc__c</fullName>
        <label>Flrs permitted in Cust NonCore Cat struc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forced_inheritance_no_custom_cores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced inheritance (no custom cores)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Delivery_Fee_Language__c</fullName>
        <label>Furniture Delivery Fee Language</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GPO_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPO Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Annual_Spend_Description__c</fullName>
        <label>GP Annual Spend Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Annual_Spend_Requirement_Amount__c</fullName>
        <label>GP Annual Spend Requirement Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Annual_Spend_Requirement__c</fullName>
        <label>GP Annual Spend Requirement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Bid_Agreement_Number__c</fullName>
        <label>GP Bid Agreement Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Core_List_Capped_Price_Increase__c</fullName>
        <label>GP Core List Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Core</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>SKU Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Core_List_SKU_Capped_Price_Increase__c</fullName>
        <label>GP Core List SKU Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$ Cap</fullName>
                </value>
                <value>
                    <fullName>% Cap</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Core_List_have_Capped_Price_Increase__c</fullName>
        <label>GP Core List have Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Cost_Plus_Language__c</fullName>
        <label>GP Cost Plus Language</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Cus_Core_List_Upd_Notice_Period_Other__c</fullName>
        <label>GP Cus Core List Upd Notice Period Other</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Cus_Core_List_Update_Notice_Period__c</fullName>
        <label>GP Cus Core List Update Notice Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>120 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No Limit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Cust_Core_List_Update_Notice_Type__c</fullName>
        <label>GP Cust Core List Update Notice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Mutual Written Consent</fullName>
                </value>
                <value>
                    <fullName>Notification Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Custom_Core_Discount_Basis__c</fullName>
        <label>GP Custom Core Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Custom_Core_Discount_Percent__c</fullName>
        <label>GP Custom Core Discount Percent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Custom_Core_Written_Agreement_Languag__c</fullName>
        <label>GP Custom Core Written Agreement Languag</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Floor_Structure_Description__c</fullName>
        <label>GP Floor Structure Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Floor_specified_in_contract__c</fullName>
        <label>GP Floor specified in contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Manufac_Vendor_letter_req_for_Increas__c</fullName>
        <label>GP Manufac/Vendor letter req for Increas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Pricing_Update_Frequency_Other__c</fullName>
        <label>GP Pricing Update Frequency Other</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Pricing_Update_Frequency__c</fullName>
        <label>GP Pricing Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Market Fluctuation</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_SKU_Cap_Dollar_Amount__c</fullName>
        <label>GP SKU Cap Dollar Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_SKU_Cap_Percent_Amount__c</fullName>
        <label>GP SKU Cap Percent Amount</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GP_SKU_Count_Limitation__c</fullName>
        <label>GP SKU Count Limitation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_decr_req_to_be_applied_to_Cust_Core__c</fullName>
        <label>GP decr req to be applied to Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandparent_Name__c</fullName>
        <label>Grandparent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Number__c</fullName>
        <label>Grandparent Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Amendment_s_been_executed__c</fullName>
        <label>Have Amendment(s) been executed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosted_catalog_fee_language__c</fullName>
        <label>Hosted catalog fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_frequently_can_the_pricing_on_the_cu__c</fullName>
        <label>How frequently can the pricing on the cu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_security_breach_notice_obligation__c</fullName>
        <label>IT security breach notice obligation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_security_breach_obligation_lang__c</fullName>
        <label>IT security breach obligation lang</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imports_fee_language__c</fullName>
        <label>Imports fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_notification_required_to_delete_a_cus__c</fullName>
        <label>Cust Notification Req&apos;d for Disc&apos;d sku</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_Most_Favored_Customer_claus__c</fullName>
        <label>Is there a &quot;Most Favored Customer&quot; claus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_Point_of_Sale_Discount__c</fullName>
        <label>Is there a Point of Sale Discount?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <label>Contract Silent</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_clawback_provision__c</fullName>
        <label>Is there a clawback provision?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_custom_NCC__c</fullName>
        <label>NCC Type?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_point_of_sales_discount__c</fullName>
        <label>Is there a point of sales discount?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_different_compensation_for_AB__c</fullName>
        <inlineHelpText>&apos;Is there different compensation for AB versus credit card billing&apos;</inlineHelpText>
        <label>Is there different compensation for AB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_2_party_or_3_party_agreement__c</fullName>
        <label>Is this a 2 party or 3 party agreement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 - party (OD &amp; Customer)</fullName>
                </value>
                <value>
                    <fullName>2 - party (OD &amp; Diversity Partner)</fullName>
                </value>
                <value>
                    <fullName>3 - party</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>2 - party (OD &amp; Reseller)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Flex_program_contract__c</fullName>
        <label>Is this a Flex program contract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Master_program_contract__c</fullName>
        <label>Is this a Master program contract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_renewal__c</fullName>
        <description>Case 00896999</description>
        <label>Is this a renewal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_count_limit__c</fullName>
        <label>Item count limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_count_restrictions__c</fullName>
        <label>Item count restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Single - Threshold</fullName>
                </value>
                <value>
                    <fullName>Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_count_threshold_tier_Count1__c</fullName>
        <label>Item count threshold/tier Count1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_count_threshold_tier_Count2__c</fullName>
        <label>Item count threshold/tier Count2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_count_threshold_tier_Count3__c</fullName>
        <label>Item count threshold/tier Count3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>